--- a/css/app.css
+++ b/css/app.css
@@ -1309,7 +1309,7 @@ h1 {
   margin: 0 0 0.13158em; }
   @media only screen and (max-width: 840px) {
     h1 {
-      font-size: 46px; } }
+      font-size: 42px; } }
 
 h2 {
   font-size: 50px;
